--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	
+	<div id="text">The Text must be inside a div tag</div>
 
 
     <script type="text/javascript" src="./script.js">
